# GoldASM

./: Cargo.toml  README.md
.github/workflows/: rust.yml
doc/: GoldASM.md  GoldCore.md  GoldISA8.md
examples/: addresstest.gasm  bank.gasm  dependency.gasm  example1.gasm  fib.gasm  otherdependency.gasm  out.symbols  serial_out.gasm  serialtest.gasm  test.gasm
examples/dependency_test/: thisisadependency.gasm
examples/doesnt_do_anything/: dependency.gasm  example1.gasm  pointer.gasm
examples/lib/: 2byte_to_ascii.gasm  math.gasm  roll_die.gasm  serial_in.gasm  serial_out.gasm
src/: asm_parser.rs  assembler.rs  disassembler.rs  loader.rs  main.rs  parser.rs  simulator.rs
src/disassembler/: symbols.rs
src/simulator/: bin_parser.rs  executor.rs
