[package]
name = "GoldASM"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.40"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
# serialport = "4.7.2" # If I add the loader to the project, then uncomment this

[profile.release]
lto = "fat"
opt-level = 3
debug = true