[package]
name = "GoldASM"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.48"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.226", features = ["derive"] }
rmp-serde = "1.3.0"
serialport = "4.7.3"

[profile.release]
lto = "fat"
opt-level = 3
#debug = true # uncomment for profiling